--- a/flink-recommendsystem-web/pom.xml
+++ b/flink-recommendsystem-web/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo</groupId>
-    <artifactId>web</artifactId>
+    <artifactId>flink-recommendsystem-web</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>web</name>
+    <name>flink-recommendsystem-web</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <hbase.version>1.4.10</hbase.version>
         <docker.image.prefix>springboot</docker.image.prefix>
     </properties>
 
@@ -94,12 +95,12 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>1.2.12</version>
+            <version>${hbase.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
-            <version>1.2.12</version>
+            <version>${hbase.version}</version>
         </dependency>
         <dependency>
             <groupId>com.demo</groupId>
