--- a/flink-recommendsystem-web/pom.xml
+++ b/flink-recommendsystem-web/pom.xml
@@ -27,6 +27,13 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.demo</groupId>
+            <artifactId>flink-recommendsystem-hbase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -89,10 +96,10 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>3.0.1</version>
+            <version>${jedis.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>${hbase.version}</version>
@@ -101,13 +108,8 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
             <version>${hbase.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.demo</groupId>
-            <artifactId>flink-2-hbase</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <!--<scope>test</scope>-->
-        </dependency>
+        </dependency>-->
+
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
