--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,46 @@
         <module>flink-recommendsystem-hbase</module>
         <module>flink-recommendsystem-web</module>
     </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <encoding>UTF-8</encoding>
+        <java.version>1.8</java.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <flink.version>1.9.0</flink.version>
+        <flink-connector-redis.version>1.1.5</flink-connector-redis.version>
+        <hbase.version>1.4.10</hbase.version>
+        <jedis.version>3.1.0</jedis.version>
+        <mysql-connector-java.version>8.0.17</mysql-connector-java.version>
+        <slf4j.version>1.7.28</slf4j.version>
+        <maven.compiler.source.version>1.8</maven.compiler.source.version>
+        <maven.compiler.target.version>1.8</maven.compiler.target.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.hbase</groupId>
+                <artifactId>hbase-client</artifactId>
+                <version>${hbase.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hbase</groupId>
+                <artifactId>hbase-server</artifactId>
+                <version>${hbase.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+        </dependency>
+    </dependencies>
 </project>
