--- a/flink-recommendsystem-hbase/pom.xml
+++ b/flink-recommendsystem-hbase/pom.xml
@@ -50,6 +50,12 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-redis_2.11</artifactId>
             <version>${flink-connector-redis.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
